--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div>
         <h1>Sliding Window Maksimum</h1>
-        <p>This is an interwiev question asked by Googgle</p>
+        <p>This is an interview question asked by Google</p>
         <img style="width: 100%;" src ="./CC_Sliding Window.png" alt="CC_Sliding">
         <button id="btn">Solution</button>
         <div id="solition">
